--- a/src/components/Article/Article.css
+++ b/src/components/Article/Article.css
@@ -7,6 +7,7 @@
 .mySwiper {
   margin: 60px 0px;
   padding: 0;
+  position: relative;
 }
 
 .swiper-slide {
@@ -16,6 +17,8 @@
   padding-left: 35px;
   padding-right: 35px;
   padding-top: 20px;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 .swiper-button-prev,
 .swiper-button-next {
